--- a/literallycanvas-0.4.10-CM/index.html
+++ b/literallycanvas-0.4.10-CM/index.html
@@ -9,6 +9,7 @@
 
     <!-- Literally Canvas -->
     <script src="js/literallycanvas.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
     <!-- where the widget goes. you can do CSS to it. -->
@@ -18,7 +19,7 @@
     <script>
         // Look ma, no jQuery!
 
-        
+
         LC.init(
             document.getElementsByClassName('literally')[0],
             {imageURLPrefix: 'img'}
