--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
         /* or if you just love jQuery,
             $('.literally').literallycanvas({imageURLPrefix: 'img'})
         */
+          
+         $('button').click(function(e){
+             e.preventDefault();
+
+             alert("clicked!");
+            var url = $(this).data('img-url');
+            var name = $(this).html();
+            var newImage = new Image();
+            newImage.src = url;
+            lc.saveShape(LC.createShape('Image', {x: 10, y: 10, image: newImage}));
+            $(".cardName").val(name);
+         });
 
         $('[data-action=upload-to-imgur]').click(function(e) {
             e.preventDefault();
@@ -84,7 +96,7 @@
                   createdJSON(TTS_Test);
                   console.log(TTS_Test.ObjectStates[0].CustomDeck);
                     
-                  $('.card-list').append("<li>"+ cardName + "</li>");
+                  $('.card-list').append('<li><button data-img-url="'+ url +'">'+ cardName + '</button></li>');
                 },
               });
             } else {
