--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div class="literally"></div>
     <form class="imgur-submit">
         <input type="text" name = "cardName" placeholder = "Enter card name here"/>
-        <input type="submit" data-action="upload-to-imgur" value="Upload to Imgur">
+        <input type="submit" data-action="upload-to-imgur" value="Save Current Card to Project">
         <p class="message"></p>
     </form>
-    <a href="data:application/xml;charset=utf-8,your code here" download="TS_Save_1.json">Save</a>
+    <a href="data:application/xml;charset=utf-8,your code here" download="TS_Save_1.json">Save Deck</a>
     <a class="sprite-maker" href="#">Make Sprite</a>
     <ul class="card-list"></ul>
 
