Starting to look nicer. Still need to change where the card list goes, hide image url.

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
 
   </head>
   <body>
-    <!-- where the widget goes. you can do CSS to it. -->
-    <div class="literally"></div>
     <form class="imgur-submit">
         <input type="text" name = "cardName" placeholder = "Enter card name here"/>
         <input type="submit" data-action="upload-to-imgur" value="Save Current Card to Project">
         <p class="message"></p>
     </form>
+    <!-- where the widget goes. you can do CSS to it. -->
+    <div class="literally"></div>
+
+    <a class="sprite-maker" href="#">Save Deck as TTS Save File</a>
     <a id = "downloadHiddenButton" href="data:application/xml;charset=utf-8,your code here" download="TS_Save_1.json">Save Deck</a>
-    <a class="sprite-maker" href="#">Make Sprite</a>
+    
     <ul class="card-list"></ul>
 
     <canvas id = "sprite"></canvas>
