Uploading custom card is almost working!

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <ul class="card-list"></ul>
 
         <canvas id = "sprite"></canvas>
+        <input type="file" onchange="previewFile()"><br>
+        <img src="" height="200" alt="Image preview...">
      </div>
     <!-- kick it off -->
     <script>
