Testing a white background placement. Please work.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 type: 'POST',
                 headers: {
                   // Your application gets an imgurClientId from Imgur
-                  Authorization: 'Client-ID ' + 'a804111608f1744',
+                  Authorization: 'Client-ID a804111608f1744',
                   Accept: 'application/json'
                 },
                 data: {
