Trying to get CORS authentication.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
                 headers: {
                   // Your application gets an imgurClientId from Imgur
                   Authorization: 'Client-ID a804111608f1744',
+                 'Cache-Control': null,
+                 'X-Requested-With': null,
                   Accept: 'application/json'
                 },
                 data: {
