Custom Card Enabled

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <canvas id = "sprite"></canvas>
-        <input type="file" onchange="previewFile()"><br>
+        <input id = "customFileUpload" type="file" onchange="previewFile()"><br>
         <img src="" height="200" alt="Image preview...">
      </div>
     <!-- kick it off -->
