--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://parall.ax/parallax/js/jspdf.js"></script>
 
   </head>
-  <body>
+  <body style="width:800px; margin:0 auto;">
     <div class = "message"></div>
     <div class = containsAll>
         <div class = "cardNamer">
